# mettleforge-derived

./: Makefile  README.md  pyproject.toml
derived/: duplicate_candidates_v1.py  multiplicity_lens_v1.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  GUARDRAILS.md  Makefile.md  RELATIONSHIPS.md  TESTING.md  USAGE.md
examples/: sample_claims.ndjson  sample_duplicate_candidates_v1.json
schemas/: duplicate_candidate_set.v1.schema.json
tests/: test_duplicate_candidates.py
